@@ -2,6 +2,8 @@ WIAPASCAL CHANGE LOG
 ======================
 
 2024/10/
+        17 Added DataType and BitDepth in WIADevice and SettingForm; 
+	   Changed TWiaImageFormat names;
         16 Added  ImageFormat functions and Methods;
 	   Renamed GetPaperSizeSet to GetPaperSize;
 	   Deleted and merged some propTypes into GetProperty/GetPropertyAttributes;
